--- a/src/apagination.css
+++ b/src/apagination.css
@@ -73,6 +73,11 @@
 	cursor: default;
 }
 
+.apg-pages-container .apg-pages-links .apg-link.active {
+	background: #428bca;
+	color: #fff;
+}
+
 .apg-slider-container {
 	position: relative;
 	height: 18px;
