Render without replace link element, scrolBy - visible, MIT license

--- a/src/apagination.css
+++ b/src/apagination.css
@@ -1,4 +1,10 @@
 /*
+	The MIT License (MIT)
+
+    Copyright (c) 2014 Goncharov Ilia (https://github.com/polyn0m/aPagination)
+
+    Version - 0.5.1
+
 	This file is part of aPagination plugin.
 */
 
